# baseball-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile
backend/agents/: __init__.py  correlation_agent.py  line_value_agent.py  projection_agent.py  weather_agent.py
backend/agents/tests/: test_projection_agent.py
backend/api/: main.py
backend/api/routers/: health.py  predictions.py  slate.py
backend/data/sources/: __init__.py  line_tracker.py  mlb_api.py  weather_api.py
backend/graphs/: __init__.py  prediction_graph.py
backend/models/betting/: __init__.py  kelly_criterion.py
backend/models/features/: __init__.py  weather_adjustments.py
backend/models/ml/: __init__.py  base_projections.py  correlation_analyzer.py  streak_detection.py
backend/requirements/: base.txt  dev.txt  ml.txt
backend/rust_extensions/: Cargo.toml
backend/rust_extensions/src/: lib.rs
backend/scripts/: setup_db.py
backend/utils/: config.py
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/styles/: globals.css
