[package]
name = "baseball_rust_ext"
version = "0.1.0"
edition = "2021"

[lib]
name = "baseball_rust_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
